# great-generator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  domain_pack.md  feature_request.md  realistic_values.md
.github/workflows/: pages.yml  release-pypi.yml  release-testpypi.yml  tests.yml
benchmarks/: benchmark_pandas_generation.py
docs/: ADVANCED_CAPABILITIES.md  ANOMALIES.md  API_REFERENCE.md  BENCHMARKS.md  CDC.md  CLOUD_DEPLOYMENT.md  CONTRIBUTING_GUIDE.md  DEMO_GUIDE.md  DOMAIN_PACKS.md  GITHUB_PAGES.md  OPEN_SOURCE_STRATEGY.md  PYPI_LONG_DESCRIPTION.md  PYPI_RELEASE.md  QUICKSTART.md  REALISTIC_VALUES.md  RELEASE_0_1_0.md  RELEASE_0_1_6.md  REPOSITORY_METADATA.md  SCHEMA_INPUTS.md  SPARK_AND_DELTA.md  SPARK_DATABASE_WRITES.md  advisors.md  index.html  plans.md
docs/assets/: site.css
docs/rfcs/: 0001-schema-source-ingestion.md  0002-streaming-generation.md  0003-quality-integrations.md  0004-medallion-catalog-output.md  0005-vector-embeddings.md  0006-rag-document-generation.md  0007-fit-from-sample.md  0008-differential-privacy.md  0009-ml-training-data.md  0010-provenance-freshness.md
enterprise_synth/: __init__.py  api.py  config.py
enterprise_synth/anomalies/: __init__.py  injector.py
enterprise_synth/cdc/: generator.py
enterprise_synth/distributions/: __init__.py  time_patterns.py
enterprise_synth/domains/: __init__.py  _industry.py  automotive.py  banking.py  ecommerce.py  energy.py  healthcare.py  hospitality.py  insurance.py  logistics.py  manufacturing.py  media.py  public_sector.py  saas.py  telecom.py
enterprise_synth/engines/: pandas_engine.py  spark_engine.py
enterprise_synth/exporters/: csv_exporter.py  delta_exporter.py  json_exporter.py  parquet_exporter.py  pathing.py
enterprise_synth/relationships/: __init__.py  graph.py  keys.py
enterprise_synth/schemas/: __init__.py  generation.py
enterprise_synth/utils/: validation.py
examples/: README.md  banking_cdc_demo.py  banking_realistic_values_demo.py  cdc_pipeline_demo.py  data_quality_anomaly_demo.py  databricks_delta_export_demo.py  ecommerce_demo.py  ecommerce_realistic_values_demo.py  healthcare_realistic_values_demo.py  pandas_quickstart.ipynb  spark_delta_demo.py
examples/01-generate-from-schema/: 01_plain_dict_schema.py  02_realistic_customer_schema.py  03_compact_ddl_schema.py  04_pandas_dtype_schema.py  05_pandas_dataframe_schema.py  06_pyspark_structtype_schema.py  07_pyspark_dataframe_schema.py  08_library_table_schema.py
examples/02-write-generated-data/: write_to_azure_sql.py  write_to_azure_sql_jdbc.py  write_to_cloud_storage.py  write_to_csv.py  write_to_databricks_table.py  write_to_delta.py  write_to_fabric_lakehouse.py  write_to_json.py  write_to_parquet.py  write_to_postgresql.py  write_to_snowflake.py  write_to_snowflake_spark.py  write_to_sqlite.py
examples/03-data-engineering-use-cases/: etl_pipeline_testing_data.py  fact_dimension_testing_data.py  lower_env_test_data.py
examples/04-custom-rules/: custom_rules.py
examples/05-generate-from-domain/: README.md
examples/planned/: README.md
great_generator/: __init__.py  api.py  cli.py  history.py  recipes.py
great_generator/advisors/: __init__.py  _json_utils.py  _prompting.py  _validation.py  anthropic.py  base.py  cache.py  exceptions.py  llamacpp.py  noop.py  ollama.py  openai.py  registry.py
great_generator/advisors/prompts/: __init__.py  propose_plan_v1.txt  review_sample_v1.txt  tag_columns_v1.txt
great_generator/anomalies/: injector.py
great_generator/cdc/: __init__.py  generator.py
great_generator/core/: __init__.py  realism.py  reference_values.py  value_generator.py
great_generator/distributions/: weighted.py
great_generator/domains/: __init__.py  _industry.py  automotive.py  banking.py  ecommerce.py  energy.py  healthcare.py  hospitality.py  insurance.py  logistics.py  manufacturing.py  media.py  public_sector.py  saas.py  telecom.py
great_generator/domains/common/: __init__.py  reference_values.py
great_generator/engines/: pandas_engine.py  spark_engine.py
great_generator/exporters/: csv_exporter.py  delta_exporter.py  json_exporter.py  parquet_exporter.py  spark_options.py
great_generator/io/: __init__.py  manifest.py
great_generator/models/: __init__.py  data_vault.py  dimensional.py
great_generator/planning/: __init__.py  plan.py
great_generator/schemas/: generation.py  models.py  relational.py  semantic.py
great_generator/utils/: random.py  validation.py
tests/: test_additional_domains.py  test_advanced_capabilities.py  test_anomaly_injection.py  test_api.py  test_banking_domain.py  test_cdc_generation.py  test_cli.py  test_ecommerce_domain.py  test_export_paths.py  test_exports.py  test_generate_with_plan.py  test_generate_without_plan.py  test_import_compatibility.py  test_realistic_values.py  test_relational_generation.py  test_relationship_integrity.py  test_scale_profiles.py  test_schema_generation.py  test_schema_semantics.py  test_seed_reproducibility.py  test_spark_domains.py  test_spark_optional.py
tests/advisors/: test_anthropic_advisor.py  test_cache.py  test_manifest_enrichment.py  test_noop_advisor.py  test_ollama_advisor.py  test_prompt_injection.py  test_registry.py
tests/planning/: test_plan_edit.py  test_plan_fingerprint.py  test_plan_roundtrip.py
