[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "enterprise-synth"
version = "0.1.0"
description = "Developer-first synthetic enterprise datasets for Pandas, Spark, testing, demos, and benchmarking."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "DataGenie contributors" }
]
keywords = [
  "synthetic-data",
  "data-engineering",
  "spark",
  "pandas",
  "cdc",
  "testing",
  "benchmarking",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pyarrow>=12.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.4"]
delta = ["pyspark>=3.4", "delta-spark>=3.0"]
dev = [
  "black>=24.0",
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/ravikiranpagidi/data-genie"
Repository = "https://github.com/ravikiranpagidi/data-genie"
Issues = "https://github.com/ravikiranpagidi/data-genie/issues"

[tool.hatch.build.targets.wheel]
packages = ["enterprise_synth"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
