[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "enterprise-synth"
version = "0.1.0"
description = "Developer-first synthetic enterprise datasets for Pandas, Spark, testing, demos, and benchmarking."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Ravi Kiran Pagidi", email = "ravikiran.pagidi@gmail.com" }
]
maintainers = [
  { name = "Ravi Kiran Pagidi", email = "ravikiran.pagidi@gmail.com" }
]
keywords = [
  "synthetic-data",
  "automotive",
  "data-engineering",
  "energy",
  "enterprise-data",
  "healthcare",
  "hospitality",
  "insurance",
  "lakehouse",
  "logistics",
  "manufacturing",
  "media",
  "spark",
  "pyspark",
  "pandas",
  "public-sector",
  "cdc",
  "delta-lake",
  "telecom",
  "saas",
  "testing",
  "benchmarking",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pyarrow>=12.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.4"]
delta = ["pyspark>=3.4", "delta-spark>=3.0"]
dev = [
  "black>=24.0",
  "build>=1.2",
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/ravikiranpagidi/data-genie"
Repository = "https://github.com/ravikiranpagidi/data-genie"
Issues = "https://github.com/ravikiranpagidi/data-genie/issues"
Changelog = "https://github.com/ravikiranpagidi/data-genie/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ravikiranpagidi/data-genie#readme"
Security = "https://github.com/ravikiranpagidi/data-genie/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["enterprise_synth"]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/README.md",
  "/SECURITY.md",
  "/docs",
  "/enterprise_synth",
  "/examples",
  "/pyproject.toml",
  "/tests",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
