[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "great-generator"
version = "0.1.1"
description = "Generate realistic synthetic enterprise data for Spark, Pandas, testing, demos, benchmarking, learning, and research."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Ravi Kiran Pagidi", email = "ravikiran.pagidi@gmail.com" }
]
maintainers = [
  { name = "Ravi Kiran Pagidi", email = "ravikiran.pagidi@gmail.com" }
]
keywords = [
  "synthetic-data",
  "automotive",
  "data-engineering",
  "energy",
  "enterprise-data",
  "healthcare",
  "hospitality",
  "insurance",
  "lakehouse",
  "logistics",
  "manufacturing",
  "media",
  "spark",
  "pyspark",
  "pandas",
  "public-sector",
  "cdc",
  "delta-lake",
  "telecom",
  "saas",
  "testing",
  "benchmarking",
  "databricks",
  "faker",
  "test-data",
  "data-generation",
  "mock-data",
  "analytics-engineering",
  "data-quality",
  "open-source",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pyarrow>=12.0",
  "faker>=25.0.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.4"]
delta = ["pyspark>=3.4", "delta-spark>=3.0"]
ingest = []
streaming = []
quality = []
vectors = []
llm = []
fit = []
dp = []
all = ["pyspark>=3.4", "delta-spark>=3.0"]
dev = [
  "black>=24.0",
  "build>=1.2",
  "mypy>=1.8",
  "pandas-stubs>=2.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "twine>=5.1",
]

[project.scripts]
great-generator = "great_generator.cli:main"

[project.urls]
Homepage = "https://github.com/ravikiranpagidi/great-generator"
Repository = "https://github.com/ravikiranpagidi/great-generator"
Issues = "https://github.com/ravikiranpagidi/great-generator/issues"
Changelog = "https://github.com/ravikiranpagidi/great-generator/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ravikiranpagidi/great-generator#readme"
Security = "https://github.com/ravikiranpagidi/great-generator/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["great_generator", "enterprise_synth"]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/README.md",
  "/SECURITY.md",
  "/benchmarks",
  "/docs",
  "/enterprise_synth",
  "/great_generator",
  "/examples",
  "/pyproject.toml",
  "/tests",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
